--- a/pixi.toml
+++ b/pixi.toml
@@ -11,3 +11,5 @@ version = "0.1.0"
 python = ">=3.13.5,<3.14"
 pandas = ">=2.3.3,<3"
 matplotlib = ">=3.10.8,<4"
+polars = ">=1.37.0,<2"
+click = ">=8.3.1,<9"
