--- a/pixi.toml
+++ b/pixi.toml
@@ -14,3 +14,5 @@ matplotlib = ">=3.10.8,<4"
 polars = ">=1.37.0,<2"
 click = ">=8.3.1,<9"
 roifile = ">=2026.1.22,<2027"
+scipy = ">=1.17.0,<2"
+scikit-learn = ">=1.8.0,<2"
