add events to traj plots

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "frameon",
         "gouraud",
         "Imagej",
+        "linalg",
         "linestyle",
         "Lohmann",
         "pcolormesh",
